# tarf

./: LICENSE  README.md
cad/: .gitignore
cad/core1_3_motor/: README.md  core1_3_motor-Body.stl  core1_3_motor.FCStd  core1_3_motor.FCStd1
cad/core1_3_motor_2/: README.md  core1_3_motor_2-Body.stl  core1_3_motor_2.FCStd  core1_3_motor_2.FCStd1
cad/core1_3_motor_3/: README.md  core1_3_motor_3-Body.stl  core1_3_motor_3.FCStd
cad/core1_motor_sensor/: core1_motor_sensor-Body.stl  core1_motor_sensor.FCStd  core1_motor_sensor.FCStd1
cad/core1_motor_sensor_2/: core1_motor_sensor_2-Body.stl  core1_motor_sensor_2.FCStd  core1_motor_sensor_2.FCStd1
cad/core1_motor_sensor_3/: core1_motor_sensor_3-Body.stl  core1_motor_sensor_3.FCStd  core1_motor_sensor_3.FCStd1
cad/core1_motor_sensor_4/: core1_motor_sensor_4-Body.stl  core1_motor_sensor_4.FCStd  core1_motor_sensor_4.FCStd1
cad/core1_motor_sensor_5/: core1_motor_sensor_5-Body.stl  core1_motor_sensor_5.FCStd  core1_motor_sensor_5.FCStd1
cad/core1_motor_tof_9axis/: core1_motor_tof_9axis-Body.stl  core1_motor_tof_9axis.FCStd  core1_motor_tof_9axis.FCStd1
cad/core2/: core2-Body.stl  core2.FCStd  core2.FCStd1
cad/core2_2/: core2_2-Body.stl  core2_2.FCStd  core2_2.FCStd1
cad/core2_3/: core2_3-Body.stl  core2_3.FCStd  core2_3.FCStd1
cad/core2_4/: core2_4-Body.stl  core2_4.FCStd  core2_4.FCStd1
cad/core2_5/: core2_5-Body.stl  core2_5.FCStd  core2_5.FCStd1
cad/core2_9axis/: core2_9axis-Body.stl  core2_9axis.FCStd  core2_9axis.FCStd1
cad/maze_pillar/: maze_pillar-Body.stl  maze_pillar.FCStd
cad/maze_wall_cap/: maze_wall_cap-Body.stl  maze_wall_cap.FCStd
cad/maze_wall_cap_I/: maze_wall_cap_I-Body.stl  maze_wall_cap_I.FCStd  maze_wall_cap_I.FCStd1
cad/maze_wall_cap_T/: maze_wall_cap_T-Body001.stl  maze_wall_cap_T.FCStd
cad/wheel_hub/: omni_wheel_hub-Body.stl  omni_wheel_hub.FCStd  omni_wheel_hub.FCStd1
docs/: VL53L0X.md
firmware/9axis-sensor-hub-int/: Cargo.toml  README.md
firmware/9axis-sensor-hub-timer/: Cargo.toml  README.md
firmware/accelaration/: README.md
firmware/adjust-position/: README.md
firmware/both-side-sensor/: README.md
firmware/buzzer/: Cargo.toml  README.md
firmware/current-pose/: README.md
firmware/interrupt-button/: Cargo.toml  README.md
firmware/interrupt-extarnal/: Cargo.toml  README.md
firmware/interrupt-external/: README.md
firmware/l-chika/: Cargo.toml
firmware/l-chika-2/: Cargo.toml  README.md
firmware/l-chika-3/: Cargo.toml
firmware/l-chika-3/src/: main.rs
firmware/l-chika-external/: README.md
firmware/l-shaped-maze/: Cargo.toml  README.md
firmware/lcd-display/: Cargo.toml
firmware/lcd-display/src/: main.rs
firmware/quad-cell-maze/: Cargo.toml  README.md
firmware/quad-cell-maze/src/: console.rs  main.rs  runningsystem.rs  sensor.rs
firmware/sd-card/: Cargo.toml
firmware/stepper-motor-interrupt/: Cargo.toml  README.md
firmware/stepper-motor-interrupt/images/: stepper_motor_breadboard.fzz
firmware/stepper-motor-interrupt/src/: main.rs
firmware/tof-sensor-hub-int/: Cargo.toml  README.md
firmware/tof-sensor-hub-int/src/: main.rs
firmware/uart/: Cargo.toml  (+1 more)
third_party_licence/: third_party_licence.txt
(+101 files in other folders)
