[package]
authors = ["HORIE Tetsuya <horie-t@users.noreply.github.com>"]
name = "stepper-motor"
edition = "2018"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.4"
heapless = "0.5.6"
panic-halt = "0.2"
vl53l0x = "0.3.1"
wio_terminal = "0.4.0"
xca9548a = "0.2.1"
