[package]
authors = ["HORIE Tetsuya <horie-t@users.noreply.github.com>"]
name = "tarf-l-shape-maze"
edition = "2018"
version = "0.1.0"

[dependencies]
panic-halt = "0.2"
wio_terminal = "0.4.0"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.4"
bitfield = "0.13.2"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
heapless = "0.5.6"
micromath = "2.0.0"
nalgebra = { version = "0.29.0", default-features = false, features = [ "macros", "libm" ]}
vl53l0x = "0.3.1"
xca9548a = "0.2.1"
