[package]
authors = ["HORIE Tetsuya <horie-t@users.noreply.github.com>"]
name = "stepper-motor"
edition = "2018"
version = "0.1.0"

[dependencies]
panic-halt = "0.2"
wio_terminal = { git = "https://github.com/atsamd-rs/atsamd", package = "wio_terminal"}
embedded-hal = "0.2.4"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
heapless = "0.7.5"